# ChatR

./: .gitignore  Cargo.toml  README.md  host_info.chatrmp  tauri.conf.json
src/: chat.rs  cli.rs  discover.rs  discovery.rs  main.rs  peers.rs  state.rs  util.rs
ui/: index.html  index.js  package.json  pnpm-lock.yaml
ui/src/: index.ts
