[package]
name = "chat_r"
version = "0.1.0"
description = "A Tauri App"
authors = ["dscham"]
license = ""
edition = "2021"
rust-version = "1.59"


[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
chrono = "0.4.23"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
nanoid = "0.4.0"
tauri = { version = "1.2.2", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
